--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: ElonMuss4Earth
 github_username:  jekyll
 
 # Build settings
-theme: minima
+theme: home
 plugins:
   - jekyll-feed
 
