--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,10 @@ t# Welcome to Jekyll!
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Sarah? More like Sararaha
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "/pages-sample" # the subpath of your site, e.g. /blog
+title: Data Analysis Portfolio
+email: LydiaErinStalcup@gmail.com
+description: >- Resiliency and Vulnerability In Cities Impacted by Natural Disaster
+baseurl: "/DataPortpolio" # the subpath of your site, e.g. /blog
 url: "https://Lydiaerin.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ElonMuss4Earth
 github_username:  jekyll
